syntax = "proto3";

option csharp_namespace = "GrpcContracts";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string username = 2;
  bool success = 3;
  string message = 4;
}